--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,5 +1,5 @@
 <nav>
-    <ul class="navbar clearfix">
+    <ul class="navbar-custom">
         <a><li>Text</li></a>
         <a><li>Text</li></a>
         <a><li>Text</li></a>
