--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,19 +1,31 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-    a{
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
+
+.click-effect{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    transition: all 1s;
+    border: 5px solid green;
 }
 
+.disable-effect{
+   transform: scale(0.0);
+   opacity: 0;
+}
+
+.menu-image{
+    height: 500px;
+}
+
+.menu-game{
+    text-align: center;
+    box-shadow: 2px 2px 5px grey;
+}
+
+.game-image{
+    width: 100%;
+    height: 1000px;
+}
