--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,24 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
+<div class="page-header">
+    <h1>Choose a game</h1>
+</div>
+
+<section class="row align-self-center">
+    <article class="col">
+        <div class="menu-image menu-game">
+            <h2 class="article-header">Game 1</h2>
+            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path%>
+        </div>
+    </article>
+    <article class="col">
+        <div class="menu-image menu-game">
+            <h2 class="article-header">Game 2</h2>
+            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path%>
+        </div>
+    </article>
+    <article class="col">
+       <div class="menu-image menu-game">
+            <h2 class="article-header">Game 3</h2>
+            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path%>
+        </div>
+    </article>
+</section>
