Javascript load error hotfix

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,19 +6,19 @@
     <article class="col">
         <div class="menu-image menu-game">
             <h2 class="article-header">Game 1</h2>
-            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path%>
+            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path, method: :get%>
         </div>
     </article>
     <article class="col">
         <div class="menu-image menu-game">
             <h2 class="article-header">Game 2</h2>
-            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path%>
+            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path, method: :get%>
         </div>
     </article>
     <article class="col">
        <div class="menu-image menu-game">
             <h2 class="article-header">Game 3</h2>
-            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path%>
+            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path, method: :get%>
         </div>
     </article>
 </section>
