Click position fix

--- a/app/views/static_pages/game.html.erb
+++ b/app/views/static_pages/game.html.erb
@@ -1,3 +1,6 @@
 <div class="game-block">
     <%= image_tag "game1.jpg", class: "game-image"%>
+    <div id="waldo" left="500px" top="50px">
+        
+    </div>
 </div>
