--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -25,7 +25,19 @@
     box-shadow: 2px 2px 5px grey;
 }
 
+.game-block{
+    position: relative;
+}
 .game-image{
     width: 100%;
     height: 1000px;
+}
+
+#waldo{
+    position: absolute;
+    border: 2px solid red;
+    left: 0;
+    top: 0;
+    width: 50px;
+    height: 50px;
 }
