--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,24 +1,4 @@
-<div class="page-header">
-    <h1>Choose a game</h1>
-</div>
-
-<section class="row align-self-center">
-    <article class="col">
-        <div class="menu-image menu-game">
-            <h2 class="article-header">Game 1</h2>
-            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path, method: :get%>
-        </div>
-    </article>
-    <article class="col">
-        <div class="menu-image menu-game">
-            <h2 class="article-header">Game 2</h2>
-            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path, method: :get%>
-        </div>
-    </article>
-    <article class="col">
-       <div class="menu-image menu-game">
-            <h2 class="article-header">Game 3</h2>
-            <%= link_to image_tag("game1.jpg", class: "img-responsive"), game_path, method: :get%>
-        </div>
-    </article>
-</section>
+<header class="jumbotron">
+    <h1 class="page-header">Where's waldo</h1>
+    <p class="header-paragraph">The old and fun game of finding waldo is now on the web available for everyone</p>
+</header>
