--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,10 +74,6 @@ table {
     margin-top: 50px;
 }
 
-.container{
-	width: 90%;
-	margin: auto;
-}
 
 .navbar-custom {
     overflow: hidden;
@@ -91,6 +87,9 @@ table {
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
+        &:hover{
+        	color: cyan;
+        }
     }
 }
 
@@ -107,13 +106,20 @@ table {
 }
 
 .page-header{
+	text-align: center;
 	font-size: 30px;
 	font-weight: bold;
-	margin: 10px 0;
+	margin: 10px auto;
 }
 
 .article-header{
 	font-size: 20px;
 	font-weight: bold;
 	margin: 10px 0;
+}
+
+.header-paragraph{
+	font-size: 20px;
+	margin: 10px 0;
+	text-align: center;
 }
