--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -35,17 +35,37 @@
 
 #waldo{
     position: absolute;
-    border: 2px solid red;
     left: 0;
     top: 0;
     width: 5%;
     height: 5%;
 }
 
-.floating-message{
-    position: absolute; 
-    width: 200px;
-    height: 50px;
-    background: rgba(0, 0, 0, .5);
-    color: white;
+.floating-form{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .3);
+    div{
+        width: 50%;
+        margin: 50px auto;
+        text-align: center;
+        background: white;
+        border-radius: 5px;
+        form{
+            *{
+            display:block;
+            margin: 5px auto;
+            }
+        }
+    }
+}
+
+.scores{
+    display: block;
+    margin: 10px auto;
+    width: 90%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
 }
