--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,8 +1,8 @@
 <nav>
     <ul class="navbar-custom">
-        <a><li>Text</li></a>
-        <a><li>Text</li></a>
-        <a><li>Text</li></a>
+        <%= link_to "Home", root_path%>
+        <%= link_to "Games", games_path%>
+        <%= link_to "Contact", contact_path%>
     </ul>
 </nav>
     
