Game database created

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body class="<%= controller_name%> <%= action_name%>">
   <%= render "/partials/header"%>
+  <%= render "/partials/flash"%>
   <div id="main" class="container">
     <%= yield %>  
   </div>
