--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,9 +87,27 @@ table {
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
+        transition: all 1s;
         &:hover{
         	color: cyan;
         }
+        
+    }
+    h1{
+    	a{
+	    	width: 50%;
+	    	margin: 5px auto;
+	    	float: none;
+	    	padding: 0;
+	    	text-align: center;
+	    	font-size: 30px;
+	    	color: white;
+	    	vertical-align: middle;
+	    	 &:hover{
+	        	color: cyan;
+	        	text-shadow: 0px 0px 10px white;
+	        }
+    	}
     }
 }
 
