--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -3,6 +3,7 @@
         <%= link_to "Home", root_path%>
         <%= link_to "Games", games_path%>
         <%= link_to "Contact", contact_path%>
+        <h1><%= link_to "Where's Waldo", root_path%></h1>
     </ul>
 </nav>
     
