--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,6 @@
-<h1 class="page-header">This rails project is avaible at:
-<%= link_to "Caiozed's github link", "https://github.com/Caiozed/photo-tagging-waldo"%>
-</h1>
+
+<div class="jumbotron">
+    <h1 class="page-header">This rails project is avaible at
+    <%= link_to "Caiozed's github", "https://github.com/Caiozed/photo-tagging-waldo"%>
+    </h1>
+</div>
